--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -642,8 +642,8 @@ video {
   top: 0px;
 }
 
-.top-2 {
-  top: 0.5rem;
+.-top-2 {
+  top: -0.5rem;
 }
 
 .top-1 {
@@ -654,8 +654,8 @@ video {
   left: 0.25rem;
 }
 
-.-top-2 {
-  top: -0.5rem;
+.top-2 {
+  top: 0.5rem;
 }
 
 .z-10 {
@@ -718,10 +718,6 @@ video {
   height: 1.5rem;
 }
 
-.h-72 {
-  height: 18rem;
-}
-
 .h-14 {
   height: 3.5rem;
 }
@@ -734,28 +730,16 @@ video {
   height: 1rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
 .max-h-0 {
   max-height: 0px;
 }
 
-.max-h-72 {
-  max-height: 18rem;
+.max-h-80 {
+  max-height: 20rem;
 }
 
 .max-h-56 {
   max-height: 14rem;
-}
-
-.max-h-64 {
-  max-height: 16rem;
-}
-
-.max-h-80 {
-  max-height: 20rem;
 }
 
 .w-full {
@@ -764,6 +748,10 @@ video {
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-1\/2 {
+  width: 50%;
 }
 
 .w-14 {
@@ -778,10 +766,6 @@ video {
   width: 1rem;
 }
 
-.w-1\/2 {
-  width: 50%;
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -794,10 +778,6 @@ video {
 
 .grid-cols-1 {
   grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 .flex-wrap {
@@ -816,21 +796,12 @@ video {
   gap: 1.5rem;
 }
 
-.gap-2 {
-  gap: 0.5rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-y-8 {
-  row-gap: 2rem;
-}
-
-.gap-x-4 {
-  -moz-column-gap: 1rem;
-       column-gap: 1rem;
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .gap-y-10 {
@@ -885,9 +856,18 @@ video {
   background-color: rgba(255, 255, 255, var(--tw-bg-opacity));
 }
 
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgba(254, 202, 202, var(--tw-bg-opacity));
+}
+
 .bg-indigo-200 {
   --tw-bg-opacity: 1;
   background-color: rgba(199, 210, 254, var(--tw-bg-opacity));
+}
+
+.fill-current {
+  fill: currentColor;
 }
 
 .px-6 {
@@ -908,16 +888,6 @@ video {
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
-}
-
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.px-8 {
-  padding-left: 2rem;
-  padding-right: 2rem;
 }
 
 .text-center {
@@ -960,6 +930,16 @@ video {
 .text-red-500 {
   --tw-text-opacity: 1;
   color: rgba(239, 68, 68, var(--tw-text-opacity));
+}
+
+.text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgba(220, 38, 38, var(--tw-text-opacity));
+}
+
+.text-indigo-600 {
+  --tw-text-opacity: 1;
+  color: rgba(79, 70, 229, var(--tw-text-opacity));
 }
 
 .opacity-0 {
@@ -1128,14 +1108,6 @@ input {
     height: 18rem;
   }
 
-  .md\:h-64 {
-    height: 16rem;
-  }
-
-  .md\:h-full {
-    height: 100%;
-  }
-
   .md\:max-h-full {
     max-height: 100%;
   }
@@ -1146,10 +1118,6 @@ input {
 
   .md\:justify-between {
     justify-content: space-between;
-  }
-
-  .md\:gap-y-0 {
-    row-gap: 0px;
   }
 
   .md\:px-8 {
@@ -1172,15 +1140,7 @@ input {
     margin-right: 2rem;
   }
 
-  .lg\:h-72 {
-    height: 18rem;
-  }
-
   .lg\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
-
-  .lg\:gap-y-0 {
-    row-gap: 0px;
   }
 }
